# reqresapi_tests_qa_guru

./: pyproject.toml
schemas/: schemas.py
tests/: tests_reqres.py
utils/: base_session.py
