[tool.poetry]
name = "reqres-api-tests"
version = "0.1.0"
description = ""
authors = ["Georgy Smirnov <mr.hazzzard@gmail.com>"]
readme = "README.md"
packages = [{include = "reqres_api_tests"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
requests = "^2.28.1"
voluptuous = "^0.13.1"
pytest-voluptuous = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
